@@ -1,11 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
   <meta name="generator" content="HTML Tidy, see www.w3.org" />
-  
-  <title>CoffeeMud 5.8 Features</title><link rel="StyleSheet" href="style.css" type="text/css" media="screen" /><!-- Modified by Josh Mueller, 2006-5-5, add index, and fix spelling errors --></head>
+  <title>CoffeeMud 5.8 Features</title>
+  <link rel="StyleSheet" href="style.css" type="text/css" media="screen" />
+<!-- Modified by Josh Mueller, 2006-5-5, add index, and fix spelling errors -->
+</head>
 <body>
 <center>
-<table border="1" bordercolor="gray" cellpadding="10" cellspacing="0" width="90%">
+<table border="1" bordercolor="gray" cellpadding="10" cellspacing="0"
+ width="90%">
   <tbody>
     <tr>
       <td colspan="2" align="left" bgcolor="#dfdfdf" width="100%">
@@ -25,7 +29,8 @@
       <td align="left" valign="top">
       <h2><a name="general">General Features</a></h2>
       <ul>
-        <li>ANSI/XTERM colour, MSP sound, MXP tags and images, MCCP compression, MSDP and GMCP variables</li>
+        <li>ANSI/XTERM colour, MSP sound, MXP tags and images, MCCP
+compression, MSDP, MCP, and GMCP.</li>
         <li>Stable, all original code base that's extendable through
 INI options, Java, and JavaScript, even at run-time</li>
         <li>Built in web server for performing maintenance,
@@ -73,7 +78,9 @@ and reactions,&nbsp;automated relationships and triggers</li>
       <ul>
         <li>On-line area creation. (mobs, areas, exits and items).
 Never wait for a reboot to publish an area!</li>
-        <li>Area Instances supported</li><li>Randomly generated area templates, along with random mobs and treasures!</li>
+        <li>Area Instances supported</li>
+        <li>Randomly generated area templates, along with random mobs
+and treasures!</li>
         <li>Area based climates, seasons, and weather changes that
 affect game play</li>
         <li>Numerous terrain types, including underwater areas
@@ -157,7 +164,8 @@ items!</li>
       <h2><a name="application">Application Information:</a></h2>
       <p>CoffeeMud
 is written in 100% Java, listening as a server on any specified
-port(s). Built-in web servers can be activated to listen on specified ports.
+port(s). Built-in web servers can be activated to listen on specified
+ports.
 CoffeeMud supports any JDBC/ODBC database and has been successfully
 tested using MySQL, HSQLDB, and Derby over JDBC, and Access/SQL Server
 over ODBC. The package also includes a flat-file JDBC system for
@@ -181,4 +189,5 @@ realism to coding!</p>
   </tbody>
 </table>
 </center>
-</body></html>
+</body>
+</html>
