@@ -5,6 +5,7 @@
    4. New DEBUG flag -- INPUT, for debugging ALL user input in string form
    5. New Property: Prop_RestrictSkills - for limiting skill use by location, or as a curse affect.
    6. New package application: VFShell, a command line tool for access full coffeemud file system without the mud.
+   7. Basic MCP support added to CoffeeMud.  ZMUD Editor package supported. mcppkgs directory for others.
 # Build 5.8.5 Released 12/23/2014
    1. Sailing ship creation and distribution now actually works.
    2. Sailing Ships are now only as fast as their item's "ability" score. (1 means 1 move per tick, etc)
